Building out Common Layout elements

--- a/app/views/search/_searchbox.html.haml
+++ b/app/views/search/_searchbox.html.haml
@@ -5,4 +5,9 @@
         = text_field_tag :keywords, params[:keywords], :id => "keywords", :class => "example", :maxlength => 30 , :title => "search for a job"
         %span#indicator.hidden= image_tag "ajax-loader.gif", :alt => ""
         %label.suggestionTop= AppConfig.search_suggestions
-      
+
+  .addJob
+    = link_to "Post a New Job", new_job_url(:cat_id => @category), :class => "add", :title => "Post a New Job"
+  
+  
+    
