--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -75,7 +75,7 @@ em {
 div#skip { display:none;}
 div#container { width:950px; text-align:left; font-size:1.2em; min-height: 100%;  height: auto !important; height: 100%; margin: 0 auto 0em; }
 div#header { height:120px; width:950px; position:relative;}
-div#header h1#logo { width:347px; height:80px; position:absolute; top:25px; left:10px; }
+div#header h1#logo { width:347px; height:80px; position:absolute; top:25px; left:20px; }
 div#header h1#logo a { width:347px; height:80px; outline:0; background: url(/images/logo.png) 0 0 no-repeat; text-indent:-1000em; float:left; }
 div#header ul#top {position:absolute; top:20px; right:20px;}
 div#header ul#top li{display:inline; margin-left:2px; background-color:transparent; color:#0099CC;}
@@ -106,16 +106,16 @@ div#promo a:hover { background: #fff; }
 #content ol { margin: 0 0 0 17px;}
 #content ul { list-style-type: disc; margin-left: 17px;}
 
-div#categs-nav {background: #0099cc; float: left; width:950px; padding-bottom: 6px; margin-top:25px; font-size: 11px;}
-div#categs-nav ul{background: #fff; float: left; width:950px;  list-style-type: none; margin:0; padding:0;}
-div#categs-nav ul li {background: white; float: left; padding-right: 6px; }
-div#categs-nav ul li a{display: block; background: #eee url(/images/sd_left.gif) no-repeat 0 0; background-position: 0 -75px;  padding: 4px 0px 4px 6px;  float: left; text-decoration: none; color: #333 !important; position: relative; outline: none;}
-div#categs-nav ul li a:hover{ background-position: 0 0px; color: #fff !important;}
-div#categs-nav ul li.selected a{ background-position: 0 0px; color: #fff !important;}
-div#categs-nav ul li a span{display: block; float: left;  padding-left: 12px;cursor: pointer; font-size:14px; padding-top:4px; }
-div#categs-nav ul li a span.cnr{display: block; background: url(/images/sd_right.gif) no-repeat right 0; background-position: right -75px;  float: left; position: relative; top:-4px;}
-div#categs-nav ul li a:hover span.cnr{ background-position: right 0px; cursor: pointer; }
-div#categs-nav ul li.selected a span.cnr{ background-position: right 0px; cursor: pointer; }
+div#categories {background: #0099cc; float: left; width:950px; padding-bottom: 6px; margin-top:25px; font-size: 11px;}
+div#categories ul{background: #fff; float: left; width:950px;  list-style-type: none; margin:0; padding:0;}
+div#categories ul li {background: white; float: left; padding-right: 6px; }
+div#categories ul li a{display: block; background: #eee url(/images/sd_left.gif) no-repeat 0 0; background-position: 0 -75px;  padding: 4px 0px 4px 6px;  float: left; text-decoration: none; color: #333 !important; position: relative; outline: none;}
+div#categories ul li a:hover{ background-position: 0 0px; color: #fff !important;}
+div#categories ul li.selected a{ background-position: 0 0px; color: #fff !important;}
+div#categories ul li a span{display: block; float: left;  padding-left: 12px;cursor: pointer; font-size:14px; padding-top:4px; }
+div#categories ul li a span.cnr{display: block; background: url(/images/sd_right.gif) no-repeat right 0; background-position: right -75px;  float: left; position: relative; top:-4px;}
+div#categories ul li a:hover span.cnr{ background-position: right 0px; cursor: pointer; }
+div#categories ul li.selected a span.cnr{ background-position: right 0px; cursor: pointer; }
 
 #sitemap-1 {float: left; display: inline; width: 200px;}
 #sitemap-2 {float: left; display: inline; width: 200px; margin-left: 30px;}
