Added Job Creation Flow

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,8 +15,11 @@
       = partial "categories/list"
       = partial "layouts/sidebar"
       
-      = yield
+      #content
+        -# holds our ajax search results
+        .job-listings
+        = yield
 
-      = partial "layouts/footer"
+    = partial "layouts/footer"
       
   
