--- a/app/views/jobs/verify.html.haml
+++ b/app/views/jobs/verify.html.haml
@@ -11,6 +11,6 @@
           If you changed your mind, you may
           = link_to "cancel posting this ad.", job_url(@job), :method => :delete, :confirm => "This will cancel and clear the job information you've entered so far. Continue?"
         
-      = submit_tag "Publish", :id => "submit"
+      = submit_tag "Publish this Job Post", :id => "submit"
       &nbsp;or&nbsp;
       = link_to "Edit It", edit_job_url
