--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -34,7 +34,8 @@
       = link_to "Sitemap", "#sitemap"
       = br
     
-    .footer-copyright
+    .footer-copyright.text-right
       Powered by 
       = link_to "jobberRails", "http://www.jobberrails.com"
-    
+      = br
+      == port of #{link_to "jobberBase", "http://www.jobberbase.com"}
