--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,7 @@
       
       #content
         -# holds our ajax search results
-        .job-listings
+        #search_results.job-listings.hidden
         = yield
 
     = partial "layouts/footer"
