Adding Job Feeds

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -10,4 +10,4 @@
     %li= link_to "Contact", "#"
   
   #the_feed
-    = link_to image_tag("bt-rss.gif"), "#"
+    = link_to image_tag("bt-rss.gif"), jobs_url(:format => "atom"), :title => "All Jobs Feed"
