--- a/public/stylesheets/sass/util.sass
+++ b/public/stylesheets/sass/util.sass
@@ -80,3 +80,17 @@ h1, h2, h3, h4, h5, h6
 .empty
   margin: 30px
   font-size: 15px
+  
+.flash
+  position: relative
+  padding-right: 25px
+  text-align: center
+  .close
+    cursor: pointer
+    position: absolute
+    top: 8px
+    right: 2px
+
+  a
+    font-weight: bold
+    color: #0066CB
