Fixing Job Application Form

--- a/app/views/jobs/parts/_apply_form.html.haml
+++ b/app/views/jobs/parts/_apply_form.html.haml
@@ -9,7 +9,6 @@
       Unfortunately, your application could not be sent. Please check the form for missing information and resubmit. 
     = br
   
-
   - form_for((job_applicant), :url => apply_job_url(job), |
               :html => {:method => :post, :id => "apply_online_form", |
                         :class => "job-form", :multipart => true}) do |f| |
@@ -17,10 +16,14 @@
     %table
       %tr
         %td= f.label :name
-        %td= f.text_field :name, :size => 30, :maxlength => 50
+        %td
+          = f.text_field :name, :size => 30, :maxlength => 50
+          = error_message_for(@job_applicant, :name)
       %tr
         %td= f.label :email
-        %td= f.text_field :email, :size => 30, :maxlength => 50
+        %td
+          = f.text_field :email, :size => 30, :maxlength => 50
+          = error_message_for(@job_applicant, :email)
       %tr
         %td{:valign => "top"}= f.label :message
         %td= f.text_area :message, :size => "60x15"
@@ -30,7 +33,11 @@
         %td
           = f.file_field :uploaded_data
           .suggestion
-            Max. 3 MB. Recommended formats: PDF, RTF, DOC, ODT.
+            Max. 3 MB. Recommended formats: PDF, RTF, DOC, ODT.          
+          - if job_applicant.errors.on(:filename)
+            .error-message Please attach a resume to apply.
+          - elsif job_applicant.errors.on(:content_type)
+            .error-message Please upload a valid resume file type (PDF, RTF, DOC, ODT, or TXT).
       %tr
         %td{:colspan => "2"}= nbsp;
 
