Added "Job Request" Form

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,7 @@
 #header
   %h1#logo= link_to AppConfig.site_name, root_url
   %ul#top
-    %li= link_to "the ideal job", "#"
+    %li= link_to "the ideal job", new_job_request_url
     = bull
     %li= link_to "Site widget", "#"
     = bull
