--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -6,11 +6,14 @@
     
       = link_to "Post a new job", new_job_url
       = br
-    
+
       = link_to "Site widget", "#widget"
       = br
     
       = link_to "RSS Feeds", "#feeds"
+      = br
+    
+      = link_to "The Ideal Job", new_job_request_url
       = br
     
     
@@ -23,6 +26,7 @@
     
       = link_to "Contact", "#contact"
       = br
+
     
     .footer-right
       Misc:
