Added "Old Job Post" warning

--- a/app/views/jobs/parts/_details.html.haml
+++ b/app/views/jobs/parts/_details.html.haml
@@ -10,7 +10,7 @@
         Congratulations, your application has been sent! Best of luck to you!
   
     -# display job outdated warning if applicable
-    - if job.updated_at < 40.days.ago
+    - if job.created_at < 40.days.ago
       .old-ad
         This job ad has been posted over 40 days ago...
   
